[tool.poetry]
name = "practice_streamlit"
version = "0.1.0"
description = ""
authors = ["N.Fujiwara <Naoki.Fujiwara@sony.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.11.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pylint = "^2.14.5"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
